[package]
name = "spacetoken"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Hanquez <vincent@coretype.io>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/vincenthz/spacetoken"
repository = "https://github.com/vincenthz/spacetoken"
description = "simple proc-macro like tokenizer and parser, with space location awareness"
keywords = ["proc-macro", "tokenizer"]
categories = ["parsing"]

[dependencies]
logos = "0.13"

[features]
default = ["parser"]
parser = []
